--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,7 +18,7 @@ website:
             href: ./tidytuesday_exercise.html
     right:
       - icon: github 
-        href: URL-TO-THIS-REPOSITORY-HERE        
+        href: https://github.com/shiwanisapkota/shiwanisapkota-MADA-portfolio       
 
 format:
   html:
