Module 11 ML Exercise

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -28,6 +28,8 @@ website:
             href: ./fluanalysis/code/Fitting.html
           - text: "Model Evaluation"
             href: ./fluanalysis/code/modeleval.html
+          - text: "Machine Learning"
+            href: ./fluanalysis/code/machinelearning.html
     right:
       - icon: github 
         href: https://github.com/shiwanisapkota/shiwanisapkota-MADA-portfolio       
